2008-06-27  Juanma Barranquero  <lekktu@gmail.com>

	* vc-dir.el (vc-dir): Complete only directory names.

2008-06-27  Jason Rumney  <jasonr@gnu.org>

        * w32-fns.el (top-level): Unconditionally define all charsets.

2008-06-27  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-mode-base-map): Don't bind C-M-[ae] to
	the CC Mode specific functions; this is no longer needed, since
	{beginning,end}-of-defun now pass ARG to ...-of-defun-function.

	* progmodes/cc-defs.el (c-emacs-features): New feature
	'argumentative-bod-function.

2008-06-27  John Paul Wallington  <jpw@pobox.com>

	* chistory.el (list-command-history): Use `bound-and-true-p'.
	(command-history-map): Define within defvar.  Add docstring.

2008-06-27  Juanma Barranquero  <lekktu@gmail.com>

	* image.el (image-jpeg-p): Don't fail if the arg cannot be converted
	to unibyte; just assume it is not a JPEG.  Use `string-match-p'.
	(image-type-from-data, image-type-from-file-name): Use `string-match-p'.
	(image-type-from-buffer): Use `looking-at-p'.

2008-06-27  Juanma Barranquero  <lekktu@gmail.com>

	* ibuf-ext.el (diff-sentinel): Declare.

2008-06-27  Glenn Morris  <rgm@gnu.org>

	* calendar/lunar.el (calendar-lunar-phases): Rename from
	calendar-phases-of-moon.  Keep old name as alias, update callers.
	(lunar-phases): Rename from phases-of-moon.  Keep old name as alias.
	(diary-lunar-phases): Rename from diary-phases-of-moon.
	Keep old name as alias.
	* calendar/cal-menu.el (cal-menu-sunmoon-menu)
	(cal-menu-global-mouse-menu): Update for lunar name changes.
	* calendar/calendar.el (calendar-mode-map): Update for name change.
	* calendar/diary-lib.el (diary-list-sexp-entries): Doc update.

2008-06-26  Glenn Morris  <rgm@gnu.org>

	* calendar/solar.el (solar-sunrise-sunset-string): Add optional
	argument `nolocation'.
	(calendar-sunrise-sunset-month): New function.
	* calendar/cal-menu.el (cal-menu-sunmoon-menu): Rename from
	cal-menu-moon-menu.  Add calendar-sunrise-sunset-month.